--- a/Group_2.html
+++ b/Group_2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meld-Tech Employee Registration Form</title>
+  <title>Lazenger-Tech Employee Registration Form</title>
   <link rel="stylesheet" href="/styles/meld.tech.css">
   <style>
     .hidden {
