--- a/Group_2.html
+++ b/Group_2.html
@@ -126,7 +126,7 @@
       </select>
     </fieldset>
 
-    <p>Mr. Mobolaji, Consent to the terms and conditions of employment with <strong>Meld-Tech</strong>. I understand and agree to abide by the policies and guidelines set forth by the company.</p>
+    <p>Mr. Mobolaji, Consent to the terms and conditions of employment with <strong>Lazenger-Tech</strong>. I understand and agree to abide by the policies and guidelines set forth by the company.</p>
     
     <label>
       <input type="checkbox" name="consent" value="consent" required>I agree to the terms and conditions
