--- a/Group_2.html
+++ b/Group_2.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lazenger-Tech Employee Registration Form</title>
-  <link rel="stylesheet" href="/styles/meld.tech.css">
+  <link rel="stylesheet" href="/lazenger_tech.css">
   <style>
     .hidden {
       display: none;
@@ -147,6 +147,6 @@
 </div>
 
 
-<script src="Group_2.js"></script>
+<script src="/Group_2.js"></script>
 </body>
 </html>
